fixed circles z-index

--- a/renace-styles.css
+++ b/renace-styles.css
@@ -172,7 +172,7 @@
     width: 600px;
     position: absolute;
     z-index: 0;
-    left: 912px;
+    left: 930px;
     top: 542px;
 }
 
